# bm13xx-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: rust-ci.yml
bm1366/: Cargo.toml
bm1366/src/: lib.rs
bm1370/: Cargo.toml
bm1370/src/: lib.rs
bm1397/: Cargo.toml
bm1397/src/: lib.rs
bm13xx-asic/: Cargo.toml
bm13xx-asic/src/: error.rs  lib.rs  pll.rs  sha.rs
bm13xx-asic/src/core_register/: clock_delay.rs  core_enable.rs  core_error.rs  core_reg11.rs  core_reg2.rs  core_reg22.rs  core_reg8.rs  hash_clock.rs  mod.rs  process_monitor.rs  sweep_clock.rs
bm13xx-asic/src/register/: analog_mux.rs  analog_mux_control.rs  chip_identification.rs  chip_nonce_offset.rs  clock_order.rs  core_register.rs  error_flag.rs  external_temperature_sensor.rs  external_temperature_sensor_read.rs  fast_uart.rs  fast_uart_configuration.rs  frequency_sweep.rs  frequency_sweep_control.rs  golden_nonce_for_sweep_return.rs  hash_counting_number.rs  hash_rate.rs  i2c.rs  i2c_control.rs  io_driver_strenght.rs  io_driver_strenght_configuration.rs  midstate_calc.rs  misc.rs  misc_control.rs  mod.rs  nonce_counter.rs  nonce_returned_timeout.rs  ordered_clock_enable.rs  pll_divider.rs  pll_parameter.rs  reg_a8.rs  return_group_pattern_status.rs  returned_single_pattern_status.rs  soft_reset.rs  ticket_mask.rs  timeout.rs  uart_relay.rs  unknown.rs  version_rolling.rs
bm13xx-chain/: Cargo.toml
bm13xx-chain/examples/: bitcrane-s19jpro.rs  cli.rs
bm13xx-chain/src/: error.rs  lib.rs
bm13xx-protocol/: Cargo.toml
bm13xx-protocol/examples/: chain_enum.rs  core_reg_probe.rs  reg_probe.rs  version_rolling.rs
bm13xx-protocol/src/: command.rs  crc.rs  error.rs  lib.rs  response.rs
