[package]
categories = ["embedded", "no-std"]
edition = "2021"
name = "bm1397"
version = "0.1.0"

[dependencies]
"bm13xx-asic" = { path = "../bm13xx-asic" }
"bm13xx-protocol" = { path = "../bm13xx-protocol" }

defmt = { workspace = true, optional = true }
fugit = { workspace = true }
heapless = { workspace = true }
log = { workspace = true, optional = true }

[features]
default = []
defmt-03 = ["dep:defmt", "bm13xx-asic/defmt-03", "bm13xx-protocol/defmt-03", "fugit/defmt", "heapless/defmt-03"]
