[package]
categories = ["embedded", "no-std"]
edition = "2021"
name = "bm1397"
rust-version = "1.75.0"
version = "0.1.0"

[dependencies]
"bm13xx-asic" = { path = "../bm13xx-asic" }
"bm13xx-protocol" = { path = "../bm13xx-protocol" }

defmt = { workspace = true, optional = true }
fugit = { workspace = true }
heapless = { workspace = true }
log = { workspace = true, optional = true }

[features]
core-error = [ # bump MSRV to 1.81.0
    "bm13xx-asic/core-error",
    "bm13xx-protocol/core-error",
]
defmt-03 = [
    "dep:defmt",
    "bm13xx-asic/defmt-03",
    "bm13xx-protocol/defmt-03",
    "fugit/defmt",
    "heapless/defmt-03",
]
