[package]
categories = ["embedded", "no-std"]
edition = "2021"
name = "bm13xx-asic"
rust-version = "1.75.0"
version = "0.1.0"

[dependencies]
bm13xx-protocol = { path = "../bm13xx-protocol" }

defmt = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["from"] }
fugit = { workspace = true }
log = { workspace = true, optional = true }
rustversion = { workspace = true }

[features]
defmt-03 = ["dep:defmt", "bm13xx-protocol/defmt-03", "fugit/defmt"]
