[package]
categories = ["embedded", "no-std"]
edition = "2021"
name = "bm13xx-asic"
rust-version = "1.86.0"
version = "0.2.0"

[dependencies]
bm13xx-protocol = { path = "../bm13xx-protocol" }

defmt = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["from"] }
fugit = { workspace = true }
log = { workspace = true, optional = true }
rustversion = { workspace = true }

[features]
defmt = ["dep:defmt", "bm13xx-protocol/defmt", "fugit/defmt"]
