[package]
categories = ["embedded", "no-std"]
edition = "2021"
name = "bm13xx-chain"
rust-version = "1.75.0"
version = "0.1.0"

[dependencies]
bm13xx-asic = { path = "../bm13xx-asic" }
bm13xx-protocol = { path = "../bm13xx-protocol" }

defmt = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["from"] }
embedded-hal = { workspace = true }
embedded-hal-async = { workspace = true }
embedded-io-async = { workspace = true }
fugit = { workspace = true }
log = { workspace = true, optional = true }
rustversion = { workspace = true }

[features]
defmt-03 = [
    "dep:defmt",
    "bm13xx-asic/defmt-03",
    "bm13xx-protocol/defmt-03",
    "embedded-hal/defmt-03",
    "embedded-hal-async/defmt-03",
    "embedded-io-async/defmt-03",
    "fugit/defmt",
]

[dev-dependencies]
bm1366 = { path = "../bm1366" }

embedded-io = { version = "0.6", features = ["std"] }
env_logger = "0.11"
inquire = "0.7"
linux-embedded-hal = "0.4"
tokio = { version = "1.38", features = ["macros", "time", "rt-multi-thread"] }
tokio-serial = "5.4"

[[example]]
name = "bm13xx-cli"
path = "examples/cli.rs"
