[package]
name = "bm13xx-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = { workspace = true }
derive_more = { workspace = true, features = ["from"] }
heapless = { workspace = true }

[dev-dependencies]
serialport = { version="4.4", default-features = false}

[[example]]
name = "reg_probe"
path = "examples/reg_probe.rs"

[[example]]
name = "core_reg_probe"
path = "examples/core_reg_probe.rs"

[[example]]
name = "version_rolling"
path = "examples/version_rolling.rs"

[[example]]
name = "chain_enum"
path = "examples/chain_enum.rs"